# DynamicsLab

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  imgui.ini  main.cpp  main.m
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
assets/files/: CombineCode.ps1
assets/scripts/: CombineEverything.ps1  CombinePhysics.ps1
assets/shaders/: axes.frag.glsl  axis.frag.glsl  axis.vert.glsl  body.frag.glsl  box.frag.glsl  box.vert.glsl  cube.frag.glsl  cube.vert.glsl  fragment.glsl  grid.frag.glsl  grid.vert.glsl  grid_fragment_shader.glsl  grid_vertex_shader.glsl  line.vert
core/: Application.cpp  Application.h  Camera.cpp  Camera.h  InputManager.cpp  InputManager.h  WindowManager.cpp  WindowManager.h
dynamics/: MatrixUtils.cpp  Simulation.cpp  Simulation.h  matrix_utilities.cpp  matrix_utilities.h  simulation.cpp  simulation.h
graphics/: Mesh.cpp  Mesh.h  MeshData.h  Renderer.cpp  Renderer.h  ScreenshotUtils.h  Shader.cpp  Shader.h  graphics_manager.cpp  graphics_manager.h
imgui/: ImGuiBody.cpp  ImGuiCamera.cpp  ImGuiDebug.cpp  ImGuiManager.cpp  ImGuiManager.h  ImGuiPhysics.cpp  ImGuiWindow.cpp
imgui/GUIs/: ImGuiBody.cpp  ImGuiCamera.cpp  ImGuiDebug.cpp  ImGuiPhysics.cpp  ImGuiRenderer.cpp  ImGuiWindow.cpp
include/: application.h  dynamics.h  graphics_manager.h  imgui_layer.h  quaternion_math.h  renderer.h  rigid_body.h  simulation.h  solver_code.cpp  solver_code.m  tools.h
include/core/: Application.h  Camera.h  Context.h  FrameTimer.h  ImGuiManager.h  InputManager.h  Proton.h  Renderer.h  SceneManager.h  ScopedTimer.h  ShaderManager.h  WindowManager.h
include/glad/: gl.h  glad.h
include/graphics/: Constraints.h  Renderer.h  ScreenshotUtils.h  Shader.h
include/imgui/: ImGuiManager.h
include/physics/: Dynamics.h  GroundPoint.h  PhysicsEngine.h  Proton.h  RigidBody.h  Solver.h  SystemBuilder.h  SystemVisualizer.h
include/physics/builders/: BallJointBuilder.h  BodyBuilder.h  ConstraintBuilder.h  DistanceConstraintBuilder.h  DynamicsBuilder.h  GravityBuilder.h  RevoluteJointBuilder.h  SphericalJointBuilder.h  SpringBuilder.h  TorqueBuilder.h  UniversalJointBuilder.h
include/physics/constraints/: BallJoint.h  Constraint.h  CylindricalJoint.h  DistanceConstraint.h  RevoluteJoint.h  SphericalJoint.h  UniversalJoint.h
include/physics/forces/: ForceElement.h  ForceGenerator.h  Gravity.h  GravityForce.h  Spring.h  SpringForce.h  Torque.h  UserForce.h
include/physics/objects/: Body.h
include/scenes/: Primary.h  Scene.h
include/utilities/: Logger.h  OpenGLCore.h  PCH.h  Proton.h  pch.h
physics/: PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h  Solver.cpp  Solver.h
source/: main.cpp
source/core/: Application.cpp  Camera.cpp  ImGuiManager.cpp  InputManager.cpp  Renderer.cpp  SceneManager.cpp  ShaderManager.cpp  WindowManager.cpp
source/physics/: Dynamics.cpp
source/physics/constraints/: BallJoint.cpp  CylindricalJoint.cpp  DistanceConstraint.cpp  RevoluteJoint.cpp  SphericalJoint.cpp  UniversalJoint.cpp
source/physics/forces/: Spring.cpp
source/scenes/: Primary.cpp
src/: application.cpp  glad.c  graphics_manager.cpp  imgui_layer.cpp  imgui_layer.h  main.cpp  renderer.cpp  renderer.h
src/Input/: InputManager.cpp  InputManager.h  KeyBindings.h
src/application/: Application.cpp  Application.h
src/core/: Application.cpp  Application.h  InputManager.cpp  WindowManager.cpp  application.cpp  main.cpp
src/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Renderer.cpp  Renderer.h  ShaderUtils.h  Window.cpp  Window.h  glad.c  renderer.cpp
src/graphics/objects/: Cube.cpp  Cube.h  Grid.cpp  Grid.h
src/graphics/shaders/: cube.frag  cube.vert  grid.frag  grid.frag.glsl  grid.vert  grid.vert.glsl
src/gui/: GuiManager.cpp  GuiManager.h  ImGuiManager.cpp  ImGuiManager.h
src/input/: InputHandler.cpp  InputHandler.h
src/main/: main.cpp
src/main/infrastructure/: Window.cpp  Window.h
src/main/input/: InputHandler.cpp  InputHandler.h
src/main/renderer/: Camera.cpp  Camera.h
src/physics/: Dynamics.cpp  Dynamics.h  GroundPoint.cpp  PhysicsEngine.cpp  RigidBody.cpp  RigidBody.h
src/simulation/: dynamics.cpp  dynamics.h  quaternion_math.cpp  quaternion_math.h  rigid_body.cpp  rigid_body.h  simulation.cpp  tools.cpp
src/ui/: UIManager.cpp  UIManager.h  imgui_layer.cpp
src/utilities/: InputManager.cpp  InputManager.h  KeyBindings.h  MatrixUtilities.cpp  MatrixUtilities.h  ShaderUtils.cpp  ShaderUtils.h
src/window/: Window.cpp  Window.h
